Parametrized languages and bounding box level
